# MOLONARI1D

./: .gitignore  API_MOLONARI.docx  API_MOLONARI.md  Cargo.toml  Column.md  FUTURE_INITIATIVES.md  INSTALL.md  MOLONARI1D_API.md  RAPPORT_2025.md  README.md  README_2D.md  README_prod.md  SD_Initializer.cpp  SD_Initializer.hpp  TEST_2D.ipynb  TRL_ASSESSMENT.md  adapt_nodered_mqtt.py  bugReport.md  collector_gabriel.py  contributors.md  defaults.csv  lib.rs  linear_system_README.md  lorawan_relay_data.csv  mainwindow.py  modeldirect_07.ipynb  mqtt_only_data.csv  pixi.toml  test.py
Molonaviz/: .gitignore  README.md  To-do-list.txt  defaults.csv  pyproject.toml  setup.py
Molonaviz/Demo/: cleanedTemperaturesPoint035.csv
Molonaviz/Demo/Notices/: notice035.txt
Molonaviz/molonari/: pyvenv.cfg
Molonaviz/molonari/Scripts/: activate  activate.bat
Molonaviz/src/molonaviz/: main.py
Molonaviz/src/receiver/: GUI_labo_virtuel.py  GUI_virtual_lab.py  README.md  adapt_nodered_mqtt.py  config.json  db_insertion.py  (+6 more)
Molonaviz/tests/: test_Molonaviz.py  test_config.py
molonari.io/website/: manage.py  pyproject.toml  requirements.txt  wordpress_building.md  wordpress_config.md  wordpress_sqlite_plugin.md
pyheatmy/: Debug_adim_ADIM.ipynb  Debug_adim_DIM.ipynb  H_res_10.csv  H_res_2.csv  H_res_5.csv  H_res_8.csv  IMPLEMENTATION_SUMMARY.md  LICENSE  LoRa_README.md  Makefile  README.md  TD4-AVRILLON_BRAILLON.ipynb  TD4_analyse_donnees.ipynb  TEST_PSEUDO2D.ipynb  T_res_1.csv  T_res_10.csv  T_res_2.csv  T_res_8.csv  comparaison_LRT_AICC.csv  critere_maison.csv  demo2023.ipynb  demoInversion.ipynb  demoPyheatmy newDREAM.ipynb  demoPyheatmy.ipynb  demoPyheatmyMultilayer.ipynb  demo_genData.ipynb  demo_genData2024.ipynb  demo_genData_multiperiod.ipynb  demo_genData_real_inversion.ipynb  demo_lora_receiver.py  demo_prediction_2D.ipynb  example1_frequentiel.py  example2_frequentiel.py  example_lora_receiver.py  example_lora_usage.py  frequency.py  frequency_updated.py  frequentiel_real_data.ipynb  jingle.py  lorawan_relay_data.csv  (+6 more)
pyheatmy/pyheatmy/: DREAM_v1.ipynb  DREAM_v3.ipynb  Gelman_Rubin.py  MCMC_README.md  Nouveau_core.py  README_2024.ipynb  README_heat_source.ipynb  README_linear_system_ADIM.md  TEST_2D.ipynb  TEST_2D_README.md  __init__.py  config.py  core.py  frequency.py  frequency2D.py  frequency2D_upd.py  gen_test.py  lagrange.py  layers.py  linear_system.py  linear_system_ADIM.py  linear_system_ADIM_README.md  linear_system_README.md  linear_system_adim.py  lora_emitter.py  lora_receiver.py  molonari1D.py  params.py  perso_test.py  refac_param.py  solver_README.md  state.py  synthetic_MOLONARI.py  system_linear.py  test_Aurélie.py  time_series.py  time_series_multiperiodic.py  utils.py  val_analy.py
pyheatmy/quantiles/: ram_management.py
pyheatmy/research/: .gitignore  DREAM_v1.ipynb  Note_adim2025.ipynb  Note_adimensionnement.ipynb  README_adim_2025.md  README_heat_source.md  TEST_2D.ipynb  Temp_ampl_ratio_diffusive_case.ipynb  Tests_dependance_temperature.ipynb  adim_2025_bis.ipynb  apoub.txt  calc_pearson_coef.py  demo_H_strat_zhanJING.ipynb  demo_prediction_2D.ipynb  frequenciel_realData.ipynb  frequency.py  lancer_simulation.py  plot_regress_temperature.py  propag_norm.ipynb  solver1D.py  solver1D_multiPeriod.py  temp_ampl_ratio_real_data.ipynb  temps_remanence.ipynb  which_point_highest_K_val.ipynb
pyheatmy/tests/: test_lora_emitter.py  test_lora_receiver.py  test_pyheatmy.py
(+837 files in other folders)
