[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyheatmy"
version = "0.4.0"
readme = "README.md"
license =  {file = "LICENSE"}
authors = [
  {name = "Mathis Bourdin", email = "mathis.bourdin@mines-paristech.fr"},
  {name = "Youri Tchouboukoff", email = "youri.tchouboukoff@mines-paristech.fr"},
]
dependencies = [
    "matplotlib",
    "scipy",
    "pandas",
    "tqdm",
    "numba>=0.60",
    "psutil",
    "nbformat",
    "nbconvert",
    "IPython",
    "pytest",
    "nbmake",
    "sklearn"
]
requires-python = ">= 3.9"

[project.urls]
Homepage = "https://github.com/flipoyo/MOLONARI1D/pyheatmy"

[tool.setuptools]
packages = ["pyheatmy"]
